Add "MergeTwoSortedLists", "RemoveElement", "Implement strStr()"